# himitsu

./: Cargo.toml  LICENSE  README.md  art.txt  test.encrypted
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  STYLE_GUIDE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: cargo-build-and-test.yml  clippy.yml  rustfmt.yml
src/: authentication.rs  errors.rs  main.rs
src/cli/: mod.rs  subcommands.rs
src/encryption/: decrypt.rs  encrypt.rs  mod.rs
src/lookup/: init.rs  mod.rs  modify.rs  secure.rs  utils.rs
src/models/: encryption.rs  metadata.rs  mod.rs
src/prompts/: add.rs  authenticate.rs  config.rs  edit.rs  mod.rs  setup.rs  use_secret.rs  utils.rs
src/utils/: anatomy.rs  cache.rs  clipboard.rs  closet.rs  config.rs  mod.rs  paint.rs  store.rs
