[package]
author = "Joseph Lai <joseph.lai241@protonmail.com>"
categories = ["authentication", "command-line-utilities", "config", "cryptography", "development-tools"]
description = "An encrypted CLI tool for managing secrets on your machine"
edition = "2021"
homepage = ""
keywords = ["encrypt", "config", "secret", "token", "vault"]
license = "MIT"
name = "skeletons"
readme = "README.md"
repository = ""
version = "1.0.0"

#[[bin]]
#name = "skeletons"
#path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.58"
chacha20poly1305 = { version = "0.9.1", features = ["stream"] }
chrono = "0.4.19"
clap = { version = "3.2.12", features = ["derive"] }
copypasta = "0.8.1"
data-encoding = "2.3.2"
directories = "4.0.1"
inquire = "0.2.1"
lazy_static = "1.4.0"
rand = "0.8.5"
ring = "0.16.20"
rust-argon2 = "1.0.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
spinners = "4.1.0"
thiserror = "1.0.31"
